# git-message-convention

./: .pre-commit-hooks.yaml  Makefile  README.md  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: sonar.yml  test.yml  validation.yml
hooks/: git_convention.py  git_karma_message.py  git_poetry_tag_exists.py
tests/: test_git_convention.py
