[tool.poetry]
name = "hooks"
version = "0.1.1"
description = "Set of custom pre-commit hooks"
authors = ["Patryk Kubiak <Patryk.Kubiak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
verify-git-karma-commit-message = "hooks.git_convention:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
